syntax = "proto3";
package Protocol;

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Google.Protobuf.Protocol";

enum MsgId
{
	S_PING = 0;
	C_PING = 1;
	S_CONNECTED = 2;
	C_CONNECTED = 3;
	S_ENTER_WAITING_ROOM = 4;
	C_ENTER_WAITING_ROOM = 5;
	S_LEAVE_WAITING_ROOM = 6;
	C_LEAVE_WAITING_ROOM = 7;
	S_REFRESH_WAITING_ROOM = 8;
	S_READY_WAITING_ROOM = 9;
	C_READY_WAITING_ROOM = 10;
	S_REFRESH_LOBBY = 11;
	C_REFRESH_LOBBY = 12;
	C_QUICK_ENTER_WAITING_ROOM = 13;
	C_CREATE_WAITING_ROOM = 14;
	S_CHAT = 15;
	C_CHAT = 16;
	S_ACCOUNT_INFO = 17;
}

message S_Connected
{
	
}

message C_Connected
{
	
}

message S_AccountInfo
{
	AccountInfo info = 1;
}

message S_Ping
{
	google.protobuf.Timestamp serverTime = 2;
}

message C_Ping
{
	
}

message S_EnterWaitingRoom
{
	WaitingRoomInfo roomInfo = 2;
	bool enterOk = 3;
}

message C_EnterWaitingRoom
{
	int32 uniqueId = 2;
	string password = 3;
}

message S_LeaveWaitingRoom
{
	bool leaveOk = 2;
}

message C_LeaveWaitingRoom
{
	int32 uniqueId = 2;
}

message S_RefreshWaitingRoom
{
	WaitingRoomInfo roomInfo = 1;
}

message S_ReadyWaitingRoom
{
	WaitingRoomPlayerInfo info = 1;
}

message C_ReadyWaitingRoom
{
	bool ready = 1;
}

message S_RefreshLobby
{
	repeated WaitingRoomInfo roomInfos = 2;
}

message C_RefreshLobby
{
	
}

message C_QuickEnterWaitingRoom
{
	
}

message C_CreateWaitingRoom
{
	int32 type = 2;
	int32 maxPersonnel = 3;
	string title = 4;
	string password = 5;
}

message S_Chat
{
	AccountInfo info = 1;
	string chat = 2;
}

message C_Chat
{
	string chat = 2;
}

message AccountInfo
{
	string uuid = 1;
	string name = 2;
	int32 level = 3;
}

message RoomInfo
{
	int32 uniqueId = 1;
	int32 type = 2;
	int32 personnel = 3;
	int32 maxPersonnel = 4;
	int32 mapId = 5;
}

message WaitingRoomInfo
{
	RoomInfo baseInfo = 1;
	string title = 2;
	bool password = 3;
	repeated WaitingRoomPlayerInfo players = 4;
}

message RoomPlayerInfo
{
	AccountInfo accountInfo = 1;
}

message WaitingRoomPlayerInfo
{
	RoomPlayerInfo baseInfo = 1;
	bool ready = 2;
}